--- a/src/app/componentes/error/error.component.html
+++ b/src/app/componentes/error/error.component.html
@@ -4,7 +4,7 @@
     <div class="hero-text">
         <h1 style="font-size:50px">Sala de Juegos</h1>
         <p>Andrés Wüthrich</p>
-        <a href="https://github.com/octaviovillegas"target="_blank">en GitHub <i class="fa fa-github"></i></a>
+        <a href="https://github.com/AndresWuthrich"target="_blank">en GitHub <i class="fa fa-github"></i></a>
         <a  routerLink="/QuienSoy"target="_blank">Quien Soy? <i class="fa fa-github"></i></a>
     </div>
     <ul class="nav navbar-nav navbar-right">
